syntax = "proto3";

package edlanioj.kbu.store;

option go_package = "app/infrastructure/grpc/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Location {
  double latitude = 1;
  double longitude = 2;
}

message Store {
  string ID = 1;
  string name = 2;
  string description = 3;
  string status = 4;
  string externalID = 5;
  string accountID = 6;
  string image = 7;
  repeated string tags = 8;
  Location location = 9;
  string category = 10;
  google.protobuf.Timestamp createdAt = 11;
}

message CreateStoreRequest {
  string name = 1;
  string description = 2;
  string categoryID = 3;
  string externalID = 4;
  repeated string tags = 5;
  double latitude = 6;
  double longitude = 7;
}

message StoreRequest {
  string id = 1;
}

message ListStoreRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort = 3;
}

message UpdateStoreRequest {
  string ID = 1;
  string name = 2;
	string description = 3;
	string categoryID = 4;
	repeated string tags = 5;
	double latitude = 6;
	double longitude = 7;
  string image = 8;
}

message ListStoreResponse {
  repeated Store stores = 1;
  int64 total = 2;
}

service StoreService {
  rpc Create (CreateStoreRequest) returns (google.protobuf.Empty) {};
  rpc Get (StoreRequest) returns (Store) {};
  rpc List (ListStoreRequest) returns (ListStoreResponse) {};
  rpc Activate (StoreRequest) returns (google.protobuf.Empty) {};
  rpc Block (StoreRequest) returns (google.protobuf.Empty) {};
  rpc Disable (StoreRequest) returns (google.protobuf.Empty) {};
  rpc Update (UpdateStoreRequest) returns (google.protobuf.Empty) {};
  rpc Delete (StoreRequest) returns (google.protobuf.Empty) {};
}